updated code for model

--- a/basic.ipynb
+++ b/basic.ipynb
@@ -11,19 +11,8 @@
      "output_type": "stream",
      "text": [
       "/Users/sdeabhi/Desktop/ai/venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n",
-      "Matplotlib is building the font cache; this may take a moment.\n"
+      "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'2.20.0'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -32,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "684ed97a-a26e-4989-9ee2-1632b22070f6",
    "metadata": {},
    "outputs": [],
@@ -42,36 +31,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "d3629e0b-c451-4a82-afa5-a649bc42ae31",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(xtrain, ytrain), (xtest, ytest) = mnist.load_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "db881163-8dbb-4201-8b24-63fbbc140703",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11b53e850>"
+       "<matplotlib.image.AxesImage at 0x11e84e970>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -95,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "4ba85509-eb3a-47ed-80ab-d77d7350e1a0",
    "metadata": {
     "scrolled": true
@@ -170,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "f02552b2-101a-4c9d-a8f1-248c398e5ca6",
    "metadata": {},
    "outputs": [],
@@ -181,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "78568be2-6605-41c2-881c-fe44d7f53ac4",
    "metadata": {
     "scrolled": true
@@ -340,17 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "24f63c24-79e6-4c82-a19f-f09be0126927",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11c767d00>"
+       "<matplotlib.image.AxesImage at 0x11e97b190>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -371,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "b3e09972-84f0-428d-980d-3ef82ad96e5c",
    "metadata": {},
    "outputs": [
@@ -380,24 +360,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 516us/step - accuracy: 0.8693 - loss: 0.4739\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 521us/step - accuracy: 0.8756 - loss: 0.4542\n",
       "Epoch 2/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 506us/step - accuracy: 0.9643 - loss: 0.1160\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 507us/step - accuracy: 0.9663 - loss: 0.1102\n",
       "Epoch 3/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 506us/step - accuracy: 0.9768 - loss: 0.0751\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 506us/step - accuracy: 0.9765 - loss: 0.0717\n",
       "Epoch 4/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 513us/step - accuracy: 0.9828 - loss: 0.0529\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 507us/step - accuracy: 0.9838 - loss: 0.0517\n",
       "Epoch 5/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 507us/step - accuracy: 0.9870 - loss: 0.0388\n"
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 507us/step - accuracy: 0.9885 - loss: 0.0379\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x11cf602e0>"
+       "<keras.src.callbacks.history.History at 0x11eb9b310>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "5c0b97cf-e7b5-4290-ab54-0850a854a0fb",
    "metadata": {},
    "outputs": [
@@ -430,8 +410,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 316us/step - accuracy: 0.9693 - loss: 0.1033\n",
-      "0.08458555489778519 0.9747999906539917\n"
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 321us/step - accuracy: 0.9690 - loss: 0.1091\n",
+      "0.09644210338592529 0.9739999771118164\n"
      ]
     }
    ],
@@ -442,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "29834c3d-67f4-4313-9441-b485f944dc9d",
    "metadata": {},
    "outputs": [
@@ -455,12 +435,12 @@
     }
    ],
    "source": [
-    "model.save('basic_nn.h5')"
+    "model.save('models/basic_nn.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "ee27678e-8d41-4c94-b183-c68a995b1486",
    "metadata": {},
    "outputs": [
@@ -476,14 +456,14 @@
     "from tensorflow.keras.activations import softmax\n",
     "\n",
     "basic_model = tf.keras.models.load_model(\n",
-    "    'basic_nn.h5',\n",
+    "    'models/basic_nn.h5',\n",
     "    custom_objects={'softmax_v2': softmax}\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "5aaa4292-e2f7-44d3-bab0-8daa7be3f230",
    "metadata": {},
    "outputs": [
@@ -499,11 +479,11 @@
      "output_type": "stream",
      "text": [
       "/Users/sdeabhi/Desktop/ai/venv/lib/python3.9/site-packages/keras/src/models/functional.py:241: UserWarning: The structure of `inputs` doesn't match the expected structure.\n",
-      "Expected: input_layer_1\n",
+      "Expected: input_layer\n",
       "Received: inputs=('Tensor(shape=(32, 28, 28))',)\n",
       "  warnings.warn(msg)\n",
       "/Users/sdeabhi/Desktop/ai/venv/lib/python3.9/site-packages/keras/src/models/functional.py:241: UserWarning: The structure of `inputs` doesn't match the expected structure.\n",
-      "Expected: input_layer_1\n",
+      "Expected: input_layer\n",
       "Received: inputs=('Tensor(shape=(None, 28, 28))',)\n",
       "  warnings.warn(msg)\n"
      ]
@@ -515,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "b9ccef15-0ca5-462d-8697-2a57b4aee46f",
    "metadata": {},
    "outputs": [
@@ -523,19 +503,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4.83123003e-12 7.96814698e-12 1.80561219e-08 ... 9.99999523e-01\n",
-      "  7.34870877e-13 9.77501080e-10]\n",
-      " [1.81087340e-10 2.72709149e-05 9.99972761e-01 ... 2.54738258e-10\n",
-      "  8.30252866e-10 2.35055074e-12]\n",
-      " [1.81045650e-08 9.99957025e-01 7.68878908e-06 ... 2.58152868e-05\n",
-      "  2.21417872e-06 6.47466658e-09]\n",
+      "[[9.79440085e-10 1.01991407e-06 2.03437776e-06 ... 9.99932647e-01\n",
+      "  4.05750846e-08 5.08815162e-07]\n",
+      " [1.24657125e-11 4.52446375e-06 9.99987245e-01 ... 3.28150051e-13\n",
+      "  1.23061582e-07 2.19116110e-12]\n",
+      " [3.34451633e-10 9.99975502e-01 1.29436728e-07 ... 1.11935815e-05\n",
+      "  9.52428036e-06 1.81600726e-07]\n",
       " ...\n",
-      " [1.48467044e-10 7.79193599e-09 7.14634174e-09 ... 2.50125777e-06\n",
-      "  5.30728030e-08 7.91703133e-06]\n",
-      " [2.14733717e-07 1.35693170e-07 5.77945762e-08 ... 2.75566254e-06\n",
-      "  5.32315695e-04 4.99872310e-10]\n",
-      " [1.15896796e-07 5.87626587e-08 6.78394190e-06 ... 6.24672447e-09\n",
-      "  3.90915147e-06 1.18845461e-10]]\n"
+      " [3.88091725e-10 4.20661372e-08 1.59663838e-08 ... 3.80509164e-06\n",
+      "  1.36549161e-07 2.41352063e-06]\n",
+      " [1.40713596e-09 6.80876511e-09 4.71294392e-11 ... 8.88158713e-10\n",
+      "  4.77133563e-06 1.38029709e-11]\n",
+      " [5.94284657e-08 2.00633343e-10 6.56583676e-11 ... 3.45736738e-11\n",
+      "  1.53017055e-07 6.64680810e-11]]\n"
      ]
     }
    ],
@@ -545,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "id": "92fffdcf-3ef9-4cb5-8028-3c857f83bcf0",
    "metadata": {},
    "outputs": [
@@ -559,10 +539,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11c990850>"
+       "<matplotlib.image.AxesImage at 0x11efec0d0>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -587,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "e9d46f4d-5c9b-4796-becd-8e1ebe9f3c27",
    "metadata": {},
    "outputs": [
